nodes/svg/grammars/PolygonGrammar.peg
/*
 * This is a grammar to parse strings describing the polygon shape,
 * basically a list of x,y pairs.
 */

start = (pairs)+

int
  = digits:[0-9]+{ return parseInt(digits.join(""), 10); }

pairs
  = val:([ ]* x:int [ ,] y:int { return {"x":x,"y":y} })+
    { return val }

ws = [ \t\r\n]
